[package]
name = "backgammon-tawla"
version = "0.0.1"
authors = ["omar samir"]
edition = "2018"

[[bin]]
name = "tawlabin"
path = "src/bin/bin.rs"

[lib]
name = "tawlalib"
path = "src/lib.rs"

[dependencies]
bevy="0.4.0"
bevy_mod_picking = "0.3.7"
bevy-orbit-controls = "1.0.2"
bevy_stl = "0.2.0"
rand = "0.8.3"
arrayvec = "0.5.2"
